
This file is in the public domain.

==============================================================
Luatex Release 0.89.2 was released 2016022700 
==============================================================

Intermediary release. Several bugs fixed.


==============================================================
Luatex Release 0.89.0 was released 2016020500 
==============================================================

No fundamental changes, just some fixes / improvements (and of course new bugglets).

- New backend things:
 \pdfvariable pkfixeddpi = integer % > 0 : use only default dpi (so one can do with one high res instance)
 \pdfvariable ignoreunknownimages = integer % > 0 : ignore missing and inject something empty (to be used with care)
  and one can do this:
 \edef\foo{\pdfvariable foo}
 \def \oof{foo}
 \ifx\foo\oof don't fool me\fi
 (side effect of no longer aborting on missing, so one implement a catch)




==============================================================
Luatex Release 0.88.0 was released 2016011500 
==============================================================

This is a next step upto 0.90 and it has the following changes:

- mostly small bug fixes 

- a few setters/getters added to the pdf namespace (were in the tex one before)

- The current libraries under libs are now:
  * poppler-0.40.0
  * mpfr-3.1.3
  * luajit-2.1.0-beta1
  * gmp-6.1.0
  * zziplib-0.13.62
  * zlib-1.2.8
  * lua52-5.2.4
  * pixman-0.32.8
  * libpng-1.6.21
  * cairo-1.14.6



==============================================================
Luatex beta-0.87.0 was released 2015121700 
==============================================================



This is a next step upto 0.90 and it has the following changes:

- image data is no longer stored in the format (it was fragile anyway)

- pdf backend data generated when in ini mode is no longer stored in  the format

- (incomplete) \mag support removed from pdf backend (this functionality is
  kept in dvi mode)
